--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -2,6 +2,10 @@
     margin: 0;
 }
 
+#body{
+    background-color: #FAFAFA;     
+}
+
 nav{
     display: flex;
     justify-content: space-between;
@@ -10,14 +14,16 @@ nav{
 }
 
 #left-menu, #right-menu{
-    margin: 25px 0;
+    padding: 11px 0;
 }
 
 #left-menu ul, #right-menu ul{
     display: flex;
-    text-align: center;
+    /* text-align: center; */
     justify-content: center;
     align-items: center;
+    padding: 0 10px;
+    margin: 0;
 }
 
 #left-menu ul li, #right-menu ul li{
@@ -25,9 +31,18 @@ nav{
     padding: 0 12px;
 }
 
+#right-menu ul{
+    margin: 7px 0;
+}
+
+#right-menu ul li:nth-child(3){
+    padding: 0 2.54px 0 0;
+}
+
 #menu-bar{
     width: 24px;
     height: 18px;
+    cursor: pointer;
 }
 
 #logo{
@@ -40,6 +55,11 @@ nav{
     height: 15.59px;
 }
 
+#search{
+    padding-left: 20px;
+    cursor: pointer;
+}
+
 #search p{
     font-size: 16px;
     margin-top: 18px;
@@ -49,16 +69,59 @@ nav{
 #not-icon{
     width: 21.52px;
     height: 21.06px;
+    cursor: pointer;
 }
 
 #profile-pic{
-
+    padding-left: 28.28px;
 }
 
 #right-menu ul li p{
     font-size: 16px;
+    margin: 0;
 }
 
 #down-arr{
+    cursor: pointer;
+}
 
+#content{
+    display: flex;
+    background-color: #FAFAFA;
+}
+
+#container{
+    width: 242px;
+    height: 100vh;
+    padding: 25px 29px 30px;
+    align-items: center;
+    background-color: #FFFFFF;
+}
+
+#container ul {
+    padding: 0;
+}
+
+#container ul li{
+    width: 183px;
+    height: 43px;
+    list-style: none;
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#container ul li:nth-child(1){
+    background-color: #FFF3F4;
+}
+
+#container ul li p{
+    margin: 0 0 0 12.5px;
+}
+
+#container ul li img{
+    width: 15px;
+    height: 15px;
 }
