--- a/css/style.css
+++ b/css/style.css
@@ -1,67 +1,66 @@
-
 * {
     margin: 0;
 }
 
-body{
+body {
     font-family: 'Poppins', sans-serif;
 
 }
 
 #section {
-    background-color: #FAFAFA;
+    background-color: #e53a3a;
     padding: 72px 140px;
 }
 
 #hero-image {
+    display: flex;
+    margin: 0 auto;
     border: 20px solid #FFFFFF;
     border-radius: 50%;
     width: 576px;
     height: 576px;
 }
 
-section row col{
-    margin: 0 20px;
-}
-#content{
+#content {
     padding: 50px;
 }
 
-#company-logo{
+#company-logo {
     width: 272px;
     height: 58px;
     margin-bottom: 20px;
     text-align: left;
 }
 
-#main-heading{
+#main-heading {
     font-size: 40px;
     margin-bottom: -5px;
     font-weight: 300;
 }
 
-#main-heading span{
+#main-heading span {
     color: #C8242F;
     font-weight: 900;
 }
 
-#main-heading, #logininfo{
+#main-heading,
+#logininfo {
     color: #3E3E3E;
 }
 
-#login-info{
+#login-info {
     font-size: 25px;
     margin-top: 30px;
     margin-bottom: 5px;
 }
 
-label{
+label {
     display: block;
     width: 100%;
 }
 
-label input{
-    width: 429px;
+label input {
+    width: 450px;
     height: 49px;
     padding: 15px;
     border: 1px solid #ADADAD;
@@ -70,18 +69,18 @@ label input{
     margin: 10px 0;
 }
 
-#btn-fp{
+#btn-fp {
     display: flex;
 }
 
-#fp{
+#fp {
     margin-top: 20px;
     color: #ADADAD;
     font-size: 15px;
     cursor: pointer;
 }
 
-#login-btn{
+#login-btn {
     margin: 10px 0;
     width: 138px;
     height: 45px;
@@ -94,13 +93,317 @@ label input{
     cursor: pointer;
 }
 
-#for-regis{
+#for-regis {
     margin-top: 10px;
     font-size: 15px;
     color: #ADADAD;
 }
 
-#for-regis span{
+#for-regis span {
     color: #C8242F;
     cursor: pointer;
+}
+
+@media (max-width: 575px) {
+    #hero-image {
+        width: 300px;
+        height: 300px;
+        border: 10px solid #FFFFFF;
+    }
+
+    #content {
+        max-width: 360px;
+        padding: 0 20px;
+        margin-top: 30px;
+    }
+
+    #section {
+        padding: 60px 30px;
+        height: 950px;
+    }
+
+    #company-logo {
+        width: 170px;
+        height: 42px;
+        margin-bottom: 10px;
+    }
+
+    #main-heading {
+        font-size: 20px;
+    }
+
+    #login-info {
+        margin-top: 22px;
+        font-size: 15px;
+    }
+
+    label input {
+        width: 260px;
+        height: 32px;
+        margin: 3px 0;
+        font-size: 12px;
+        padding: 0;
+        padding-left: 10PX;
+    }
+
+    #login-btn {
+        margin-right: 90px;
+        width: 75px;
+        height: 25px;
+        font-size: 13px;
+    }
+
+    #fp {
+        margin-top: 15px;
+        font-size: 12px;
+    }
+
+    #for-regis {
+        font-size: 12px;
+        margin-top: 0;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767px) {
+    #hero-image {
+        width: 350px;
+        height: 350px;
+        border: 10px solid #FFFFFF;
+    }
+
+    #company-logo {
+        width: 268px;
+        height: 60px;
+        margin-bottom: 10px;
+    }
+
+    #content {
+        max-width: 400px;
+        margin-top: 30px;
+        padding: 0;
+    }
+
+    #main-heading {
+        font-size: 32px;
+    }
+
+    #login-info {
+        margin-top: 27px;
+        font-size: 20px;
+    }
+
+    #section {
+        width: 100%;
+        padding: 40px 30px;
+    }
+
+    #section .row {
+        display: block;
+    }
+
+    #2-col {
+        display: flex;
+        margin: 0 auto;
+    }
+
+    label input {
+        width: 360px;
+        height: 37px;
+        margin: 3px 0;
+        font-size: 15px;
+        padding: 0;
+        padding-left: 10PX;
+    }
+
+    #login-btn {
+        margin-right: 140px;
+        width: 100px;
+        height: 35px;
+        font-size: 15px;
+    }
+
+    #fp {
+        margin-top: 15px;
+        font-size: 15px;
+    }
+
+    #for-regis {
+        font-size: 15px;
+        margin-top: 10px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    #hero-image {
+        width: 350px;
+        height: 350px;
+        border: 10px solid #FFFFFF;
+    }
+
+    #content {
+        max-width: 360px;
+        padding: 0;
+        margin-top: 30px;
+    }
+
+    #section {
+        padding: 60px 60px;
+        height: 100vh;
+    }
+
+    #company-logo {
+        width: 150px;
+        height: 42px;
+        margin-bottom: 10px;
+    }
+
+    #main-heading {
+        font-size: 21px;
+    }
+
+    #login-info {
+        margin-top: 22px;
+        font-size: 15px;
+    }
+
+    label input {
+        width: 260px;
+        height: 32px;
+        margin: 3px 0;
+        font-size: 12px;
+        padding: 0;
+        padding-left: 10PX;
+    }
+
+    #login-btn {
+        margin-right: 90px;
+        width: 75px;
+        height: 25px;
+        font-size: 13px;
+    }
+
+    #fp {
+        margin-top: 15px;
+        font-size: 12px;
+    }
+
+    #for-regis {
+        font-size: 12px;
+        margin-top: 0;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    #hero-image {
+        width: 460px;
+        height: 460px;
+        border: 15px solid #FFFFFF;
+    }
+
+    #content {
+        max-width: 360px;
+        padding: 0;
+        margin-top: 30px;
+    }
+
+    #section {
+        padding: 72px 70px;
+    }
+
+    #company-logo {
+        width: 195px;
+        height: 50px;
+    }
+
+    #main-heading {
+        font-size: 28px;
+    }
+
+    #login-info {
+        font-size: 17px;
+    }
+
+    label input {
+        width: 310px;
+        height: 35px;
+        margin: 5px 0;
+        font-size: 12px;
+        padding: 0;
+        padding-left: 10PX;
+    }
+
+    #login-btn {
+        margin-right: 115px;
+        width: 85px;
+        height: 30px;
+        font-size: 15px;
+    }
+
+    #fp {
+        margin-top: 15px;
+        font-size: 13px;
+    }
+
+    #for-regis {
+        font-size: 13px;
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1399px) {
+    #hero-image {
+        width: 500px;
+        height: 500px;
+    }
+
+    #content {
+        max-width: 400px;
+        padding: 0;
+        margin-top: 30px;
+        margin-left: 20px;
+    }
+
+    #section {
+        padding: 72px 70px;
+    }
+
+    #company-logo {
+        width: 220px;
+        height: 52px;
+    }
+
+    #main-heading {
+        font-size: 32px;
+    }
+
+    #login-info {
+        font-size: 20px;
+    }
+
+    label input {
+        width: 360px;
+        height: 40px;
+        margin: 7px 0;
+        padding: 0;
+        padding-left: 15px;
+    }
+
+    #login-btn {
+        margin-right: 115px;
+        width: 105px;
+        height: 38px;
+    }
+
+    #fp {
+        font-size: 14px;
+    }
+
+    #for-regis {
+        font-size: 14px;
+    }
+}
+
+@media (min-width: 1400px) {
+    #section {
+        padding: 72px 105px;
+    }
 }
