--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -145,9 +145,8 @@ nav {
 }
 
 #dashboard {
-    width: auto;
+    width: 100%;
     padding: 40px;
-    margin: 0 auto;
 }
 
 #dashboard h1 {
@@ -467,7 +466,6 @@ table tr:nth-child(n+1):nth-child(-n+9) {
     }
 
     #dashboard {
-        width: 400px;
         padding: 20px;
     }
 
@@ -484,8 +482,15 @@ table tr:nth-child(n+1):nth-child(-n+9) {
         margin-left: 7px;
     }
 
+    #graph{
+        padding: 10px;
+        margin: 0 0 20px 0;
+    }
+
     #pie-chart {
+        padding: 10px;
         width: 300px;
+        margin: 10px auto;
     }
 
     .rows span {
@@ -508,7 +513,6 @@ table tr:nth-child(n+1):nth-child(-n+9) {
     }
 
     #last-row {
-        width: 300px;
         overflow: scroll;
         padding: 10px;
     }
@@ -572,7 +576,6 @@ table tr:nth-child(n+1):nth-child(-n+9) {
     }
 
     #dashboard {
-        width: 400px;
         padding: 20px;
     }
 
@@ -589,7 +592,12 @@ table tr:nth-child(n+1):nth-child(-n+9) {
         margin-left: 7px;
     }
 
+    #graph{
+        margin: 10px auto;
+    }
+
     #pie-chart {
+        margin: 10px auto;
         width: 300px;
     }
 
@@ -650,7 +658,6 @@ table tr:nth-child(n+1):nth-child(-n+9) {
     }
 
     #dashboard {
-        width: 600px;
         padding: 20px;
     }
 
@@ -665,6 +672,14 @@ table tr:nth-child(n+1):nth-child(-n+9) {
 
     #container ul li a p {
         margin-left: 7px;
+    }
+
+    #graph{
+        margin: 10px auto;
+    }
+
+    #pie-chart{
+        margin: 10px auto;
     }
 
     #pie-chart h3,
